# mattermost-client-qt

./: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmattermostbackend.cpp  qmattermostbackend.h  resource.qrc
